--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <title>Tortoisse and animal</title>
 </head>
 <body>
-    
+    <p>U ma gu turu love!</p>
+    <p>Tumi k go tomai to thik chinlam na?</p>
+    <img src="Images/routine (5).png" alt="Not interested">
 </body>
 </html>
